# interview-ai-exercise

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_endpoints.ipynb
ai_exercise/: constants.py  eval.py  main.py  models.py  synth_gen.py
ai_exercise/llm/: __init__.py  completions.py  embeddings.py
ai_exercise/loading/: __init__.py  chunk_json.py  document_loader.py
ai_exercise/retrieval/: retrieval.py  vector_store.py
demo/: README.md  main.py  ping.py
src/: __init__.py  constants.py  main.py  models.py
src/llm/: completions.py  embeddings.py
src/loading/: document_loader.py
src/retrieval/: vector_store.py
tests/: __init__.py  test_main.py
